# Zenith

./: README.md  Zenith.sln
Zenith/: CMakeLists.txt  Zenith.vcxproj  Zenith.vcxproj.filters  ZenithEngine.h  main.cpp
Zenith/Graphics/: GraphicsEngine.cpp  GraphicsEngine.h
Zenith/Graphics/Buffers/: IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Zenith/Graphics/Camera/: Camera.cpp  Camera.h
Zenith/Graphics/Lighting/: Light.h
Zenith/Graphics/Materials/: Material.cpp  Material.h
Zenith/Graphics/Meshes/: Mesh.cpp  Mesh.h
Zenith/Graphics/Models/: Model.cpp  Model.h
Zenith/Graphics/Renderables/: Renderable.h
Zenith/Graphics/Renderer/: Renderer.cpp  Renderer.h
Zenith/Graphics/Shaders/: Shader.cpp  Shader.h  basic.frag  basic.vert
Zenith/Graphics/Textures/: Texture2D.cpp  Texture2D.h
Zenith/Input/: InputHandler.cpp  InputHandler.h
Zenith/Scene/Components/: Transform.cpp  Transform.h
Zenith/x64/Debug/: Zenith.exe.recipe  Zenith.ilk  Zenith.vcxproj.FileListAbsolute.txt  vc143.idb
Zenith/x64/Debug/Zenith.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Zenith.lastbuildstate  Zenith.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
